fixed spacing

--- a/app/assets/stylesheets/pages.css
+++ b/app/assets/stylesheets/pages.css
@@ -16,6 +16,7 @@
 **  Trying out flat icons. If outline need github outline
 **  Go full minimalistic, you need a unique design that people remember
 **  Get better quality photography pics. and lower too high res ones.
+**  Clean up Resume
 **  -------------------------------------------------- */
 
 /* $HTML ELEMENTS
@@ -39,7 +40,7 @@ p {
   font-family: 'Open Sans', Sans-Serif;
   color: #555;
   font-size: 1em;
-  line-height: 1.375em;
+  line-height: 1.5em;
   margin-bottom: 2em;
 }
 /* Highlight selection */
@@ -133,6 +134,7 @@ a.logo-link:hover h4  {text-decoration: underline;}
   text-align: right;
   padding: 15px 0 50px;
 }
+.main-contact-info h4 {padding-bottom: 5px;}
 
 /* $NAVIGATION 
 ================================================== */
@@ -179,6 +181,7 @@ a.logo-link:hover h4  {text-decoration: underline;}
 ================================================== */
 .home-info {text-align: center;}
 .home-info h2 {padding-bottom: 30px;}
+.home-info h1,
 .home-info h4 {padding-bottom: 15px;}
 /* Centers navicon when single on row */
 .navicon-block {text-align: center; padding-bottom: 30px;}
@@ -230,10 +233,12 @@ a.navicon-link:hover h3 {border: 1px solid white;}
 ========================= */
 .project-block    {padding-bottom: 75px;}
 .project-title    {padding-bottom: 20px; text-align: center;}
+.project-title h2,
+.project-title h4 {padding-bottom: 10px;}
 .project-title h3 {padding-bottom: 5px;}
 .project-desc     {padding-bottom: 30px;}
 .project-info     {padding-bottom: 15px;}
-.project-info h4  {font-weight: bold;}
+.project-info h4  {font-weight: bold; margin-bottom: 10px;}
 .project-img-extra img,
 .project-img img  {
   width: 100%;
@@ -282,7 +287,7 @@ a.navicon-link:hover h3 {border: 1px solid white;}
 /* $ABOUT 
 ================================================== */
 .about-me h3,
-.about-me h4 {font-weight: bold;}
+.about-me h4 {font-weight: bold; padding-bottom: 10px; word-wrap: break-word;}
 .about-img {text-align: center;}
 .about-img img {
   width: 100%;
@@ -299,7 +304,7 @@ a.navicon-link:hover h3 {border: 1px solid white;}
 
 /* $CONTACT 
 ================================================== */
-.contact-info {padding-bottom: 30px; text-align: center;}
+.contact-info {padding-bottom: 50px; text-align: center;}
 .contact-info h3 {padding-bottom: 10px; font-weight: bold;}
 .contact-info h3:last-of-type {padding-bottom: 0;}
 .contact-paragraph h4 {padding-bottom: 1em;}
@@ -327,7 +332,7 @@ a.navicon-link:hover h3 {border: 1px solid white;}
 }
 .icon-tray li {display: inline-block; margin-right: 10%;}
 .icon-tray li:last-of-type {margin-right: 0;}
-.icon-tray div {opacity: .7}
+.icon-tray div {opacity: .7;}
 .icon-tray h4  {padding-bottom: 15px;}
 .icon-tray a   {display: inline-block;}
 .icon-tray a:hover div {opacity: 1;}
@@ -484,6 +489,7 @@ a.navicon-link:hover h3 {border: 1px solid white;}
   .four-fifths,   
   .five-sixths   {width: 100%;}
   .project-info,
+  .about-me,
   .contact-img   {width: 100%; margin-left: 0;}
   .about-img     {width: 100%;}
 }
